--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,8 @@ Flask-WTF==1.0.0
 TinyDB==4.7.0
 Werkzeug==2.1.1
 pyrebase4==4.5.0
+requests==2.31.0
+urllib3==1.26.16
+google-auth==2.22.0
+google-auth-oauthlib==1.2.0
+google-auth-httplib2==0.1.0
