--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-Flask==2.1.0
-Flask-SQLAlchemy==2.5.1
-Flask-WTF==1.0.0
-TinyDB==4.7.0
-Werkzeug==2.1.1
-firebase-admin==6.2.0
+flask==2.1.0
+flask-sqlalchemy==2.5.1
+flask-wtf==1.0.0
+tinydb==4.7.0
+pyrebase==3.0.27
+python-dotenv==0.19.2
+requests==2.26.0
+markupsafe==2.0.1
+werkzeug==2.0.2
